--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,11 @@
   <mat-toolbar-row style="background: white;">
 	  <mat-chip-list>
 		    <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip>
-		    <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
-				<mat-chip color="accent" selected="false" routerLink="/kiuwan">Kiuwan</mat-chip>
-				<mat-chip color="accent" selected="false" routerLink="/kiuwandata">Kiuwan Dashboard</mat-chip>
+		    <mat-chip color="accent" selected="false" routerLink="/srequest">SAST Serv.Req.</mat-chip>
+				<mat-chip color="accent" selected="false" routerLink="/kiuwan">Kiuwan Apps.</mat-chip>
+				<mat-chip color="accent" selected="false" routerLink="/kiuwandata">Load Kiuwan DB</mat-chip>
 				<mat-chip color="accent" selected="false" routerLink="/fod">Fortify Dashboard</mat-chip>
+				<mat-chip color="accent" selected="false" routerLink="/foddb">Load FoD DB</mat-chip>
 		</mat-chip-list>
 	  </mat-toolbar-row>
 </mat-toolbar>
