--- a/src/app/kiuwan-applications/kiuwan-applications.component.html
+++ b/src/app/kiuwan-applications/kiuwan-applications.component.html
@@ -13,8 +13,8 @@
       </mat-progress-spinner>
     </mat-card-content>
   </mat-card>
-  <h5>S-SLDC RollOut</h5>
+  <h5>S-SLDC Applications:</h5>
   <kiuwan-applications-table></kiuwan-applications-table>
-  <h5>POCs</h5>
+  <h5>POC Applications:</h5>
   <kiuwan-applications-table></kiuwan-applications-table>
 </div>
